--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <main>
         <section>
             <div class="container">
+                <div>
+                    <h1 class="container--h1">Mugiwara's Most Wanted List</h1>
+                </div>
+                <div class="container-list">
                 <div class="container_child">
                     <div id="luffy-card" class="container__child--cards">
                         <img src="./img/luffy.jpeg" alt="" width="100%" height="200px">
@@ -63,6 +67,7 @@
                             <button class="btn btn-danger">Dead</button>
                             <button class="btn btn-primary">Alive</button>
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
